...
import com.costular.designsystem.theme.AtomTheme
import com.ramcosta.composedestinations.generated.agenda.destinations.AgendaScreenDestination
import com.ramcosta.composedestinations.generated.verticaltasks.destinations.VerticalTasksScreenDestination
import com.ramcosta.composedestinations.rememberNavHostEngine
import com.costular.atomtasks.core.ui.R.string as S

internal const val CreateTaskFabTag = "CreateTaskFab"

@Composable
fun App(
    isDarkTheme: Boolean,
) {
    AtomTheme(darkTheme = isDarkTheme) {
...
