...
        Row(
            modifier = Modifier.padding(vertical = AppTheme.dimens.spacingMedium),
            verticalAlignment = Alignment.CenterVertically,
        ) {
            Spacer(Modifier.width(AppTheme.dimens.spacingLarge))

            Markable(
                isMarked = isFinished,
                onMarkChanged = onMark,
            )

            Spacer(modifier = Modifier.width(AppTheme.dimens.spacingLarge))

...
